recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
    forward(length/(3.+levels))
                      ^Koch:17: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Double <and> (x: Long)Double <and> (x: Int)Double <and> (x: Char)Double <and> (x: Short)Double <and> (x: Byte)Double
 required: Double
    snowSide(levels-1,length/)
                            ^